--- a/style.css
+++ b/style.css
@@ -348,3 +348,18 @@ img {
     font-size: 1.5em;
   }
 }
+
+.footer {
+  display: flex;
+  height: 200px;
+  background: #2c70ff;
+  height: 200px;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 2.25em;
+  color: #122ab2;
+}
